# sunfire-site

./: Cargo.toml  Rocket.toml  build.rs  diesel.toml  flake.nix
.cargo/: config.toml
.github/workflows/: cross-compile.yml
src/: lib.rs  main.rs  response.rs
src-web/: astro.config.ts  package.json
